--- a/navigation.html
+++ b/navigation.html
@@ -2,59 +2,29 @@
   <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;gradle-enterprise-api-kotlin-nav-submenu&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="index.html"><span><span>gradle-enterprise-api-kotlin</span></span></a></div>
   <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api////PointingToDeclaration//769193423">
     <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;gradle-enterprise-api-kotlin-nav-submenu-0&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/index.html"><span>com.</span><wbr></wbr><span>gabrielfeo.</span><wbr></wbr><span>gradle.</span><wbr></wbr><span>enterprise.</span><wbr></wbr><span>api</span></a></div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-0" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//accessToken/#/PointingToDeclaration//769193423">
-      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/access-token.html"><span>access</span><wbr></wbr><span><span>Token</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-1" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//api/#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-0" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//api/#/PointingToDeclaration//769193423">
       <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/api.html"><span><span>api</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-2" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//baseUrl/#/PointingToDeclaration//769193423">
-      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/base-url.html"><span>base</span><wbr></wbr><span><span>Url</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-3" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//cacheDir/#/PointingToDeclaration//769193423">
-      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/cache-dir.html"><span>cache</span><wbr></wbr><span><span>Dir</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-4" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//contains/kotlin.collections.List[com.gabrielfeo.gradle.enterprise.api.model.BuildAttributesValue]#kotlin.String/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-1" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//contains/kotlin.collections.List[com.gabrielfeo.gradle.enterprise.api.model.BuildAttributesValue]#kotlin.String/PointingToDeclaration//769193423">
       <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/contains.html"><span><span>contains()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-5" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//debugLoggingEnabled/#/PointingToDeclaration//769193423">
-      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/debug-logging-enabled.html"><span>debug</span><wbr></wbr><span>Logging</span><wbr></wbr><span><span>Enabled</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-6" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//get/kotlin.collections.List[com.gabrielfeo.gradle.enterprise.api.model.BuildAttributesValue]#kotlin.String/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-2" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//get/kotlin.collections.List[com.gabrielfeo.gradle.enterprise.api.model.BuildAttributesValue]#kotlin.String/PointingToDeclaration//769193423">
       <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/get.html"><span><span>get()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-7" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//getBuildsFlow/com.gabrielfeo.gradle.enterprise.api.GradleEnterpriseApi#kotlin.Long#kotlin.String?#kotlin.Long?#kotlin.String?/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-3" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//getBuildsFlow/com.gabrielfeo.gradle.enterprise.api.GradleEnterpriseApi#kotlin.Long#kotlin.String?#kotlin.Long?#kotlin.String?/PointingToDeclaration//769193423">
       <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/get-builds-flow.html"><span>get</span><wbr></wbr><span>Builds</span><wbr></wbr><span><span>Flow()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-8" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//getGradleAttributesFlow/com.gabrielfeo.gradle.enterprise.api.GradleEnterpriseApi#kotlin.Long#kotlin.String?#kotlin.Long?#kotlin.String?#kotlinx.coroutines.CoroutineScope/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-4" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//getGradleAttributesFlow/com.gabrielfeo.gradle.enterprise.api.GradleEnterpriseApi#kotlin.Long#kotlin.String?#kotlin.Long?#kotlin.String?#kotlinx.coroutines.CoroutineScope/PointingToDeclaration//769193423">
       <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/get-gradle-attributes-flow.html"><span>get</span><wbr></wbr><span>Gradle</span><wbr></wbr><span>Attributes</span><wbr></wbr><span><span>Flow()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-9" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api/GradleEnterpriseApi///PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-5" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api/GradleEnterpriseApi///PointingToDeclaration//769193423">
       <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/-gradle-enterprise-api/index.html"><span>Gradle</span><wbr></wbr><span>Enterprise</span><wbr></wbr><span><span>Api</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-10" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//longTermCacheMaxAge/#/PointingToDeclaration//769193423">
-      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/long-term-cache-max-age.html"><span>long</span><wbr></wbr><span>Term</span><wbr></wbr><span>Cache</span><wbr></wbr><span>Max</span><wbr></wbr><span><span>Age</span></span></a></div>
+    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-6" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api/Options///PointingToDeclaration//769193423">
+      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/-options/index.html"><span><span>Options</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-11" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//longTermCacheUrlPattern/#/PointingToDeclaration//769193423">
-      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/long-term-cache-url-pattern.html"><span>long</span><wbr></wbr><span>Term</span><wbr></wbr><span>Cache</span><wbr></wbr><span>Url</span><wbr></wbr><span><span>Pattern</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-12" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//maxCacheSize/#/PointingToDeclaration//769193423">
-      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/max-cache-size.html"><span>max</span><wbr></wbr><span>Cache</span><wbr></wbr><span><span>Size</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-13" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//maxConcurrentRequests/#/PointingToDeclaration//769193423">
-      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/max-concurrent-requests.html"><span>max</span><wbr></wbr><span>Concurrent</span><wbr></wbr><span><span>Requests</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-14" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//shortTermCacheMaxAge/#/PointingToDeclaration//769193423">
-      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/short-term-cache-max-age.html"><span>short</span><wbr></wbr><span>Term</span><wbr></wbr><span>Cache</span><wbr></wbr><span>Max</span><wbr></wbr><span><span>Age</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-15" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//shortTermCacheUrlPattern/#/PointingToDeclaration//769193423">
-      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/short-term-cache-url-pattern.html"><span>short</span><wbr></wbr><span>Term</span><wbr></wbr><span>Cache</span><wbr></wbr><span>Url</span><wbr></wbr><span><span>Pattern</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-16" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//shutdown/#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-7" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//shutdown/#/PointingToDeclaration//769193423">
       <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/shutdown.html"><span><span>shutdown()</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-0-17" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api//withGradleAttributes/kotlinx.coroutines.flow.Flow[com.gabrielfeo.gradle.enterprise.api.model.Build]#kotlinx.coroutines.CoroutineScope/PointingToDeclaration//769193423">
-      <div class="overview"><a href="gradle-enterprise-api-kotlin/com.gabrielfeo.gradle.enterprise.api/with-gradle-attributes.html"><span>with</span><wbr></wbr><span>Gradle</span><wbr></wbr><span><span>Attributes()</span></span></a></div>
     </div>
   </div>
   <div class="sideMenuPart" id="gradle-enterprise-api-kotlin-nav-submenu-1" pageId="gradle-enterprise-api-kotlin::com.gabrielfeo.gradle.enterprise.api.model////PointingToDeclaration//769193423">
